# GetVacancion

./: .gitignore  Readme.md  main.py  pyproject.toml  utils.py
src/: classes.py  servises.py  utils.py
tests/: test_classes.py  test_servises.py  test_utils.py
